[gd_scene load_steps=11 format=3 uid="uid://qpcq5e3lvurc"]

[ext_resource type="Script" path="res://code/finish_screen.gd" id="1_rjf3c"]
[ext_resource type="Texture2D" uid="uid://cs3kfjyqsa7qi" path="res://Images/Motocross/fondoRecursos.png" id="2_3bk4w"]
[ext_resource type="FontFile" uid="uid://byt31ylsqbup1" path="res://fuente.ttf" id="3_k86ht"]
[ext_resource type="Texture2D" uid="uid://b83kglkq6j4td" path="res://Images/Pickups/moneda10.png" id="4_ucs8y"]
[ext_resource type="AudioStream" uid="uid://dsyrttjiauvd7" path="res://Audio/musicaIntro.ogg" id="5_jkyta"]
[ext_resource type="AudioStream" uid="uid://dur3n4owdwwm0" path="res://Audio/click.ogg" id="6_aeo8t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gmrmn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yu0wo"]
bg_color = Color(0.974438, 0.690468, 0.339434, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sq36v"]
bg_color = Color(0.572639, 0.366483, 0.0635207, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvj1k"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.811238, 0.512865, 0.159762, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(0, 10)

[node name="FinishScreen" type="PanelContainer"]
offset_right = 1917.0
offset_bottom = 1064.0
script = ExtResource("1_rjf3c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_3bk4w")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 12
theme_override_constants/shadow_offset_y = 23
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_k86ht")
theme_override_font_sizes/font_size = 200
text = "Â¡COMPLETADO!"

[node name="Botones" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="total_Monedas" type="Label" parent="VBoxContainer/Botones"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 12
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_k86ht")
theme_override_font_sizes/font_size = 60
text = " X "
horizontal_alignment = 1

[node name="Moneda10" type="Sprite2D" parent="VBoxContainer/Botones/total_Monedas"]
position = Vector2(50, 30)
texture = ExtResource("4_ucs8y")

[node name="btn_Sig_Level" type="Button" parent="VBoxContainer/Botones"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_k86ht")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_gmrmn")
theme_override_styles/hover = SubResource("StyleBoxFlat_yu0wo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sq36v")
theme_override_styles/normal = SubResource("StyleBoxFlat_hvj1k")
text = "  SIGUIENTE "

[node name="btn_Menu" type="Button" parent="VBoxContainer/Botones"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_k86ht")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_gmrmn")
theme_override_styles/hover = SubResource("StyleBoxFlat_yu0wo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sq36v")
theme_override_styles/normal = SubResource("StyleBoxFlat_hvj1k")
text = "  SALIR  "

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jkyta")
autoplay = true
parameters/looping = true

[node name="clickBoton" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_aeo8t")

[connection signal="mouse_entered" from="VBoxContainer/Botones/btn_Sig_Level" to="." method="_on_btn_sig_level_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Botones/btn_Sig_Level" to="." method="_on_btn_sig_level_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Botones/btn_Menu" to="." method="_on_btn_menu_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Botones/btn_Menu" to="." method="_on_btn_menu_pressed"]
